@@ -1,3 +1,9 @@
+2011-12-21  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR target/51643
+	* arm.c (arm_function_ok_for_sibcall): Don't try to tailcall a
+	weak function on bare-metal EABI targets.
+
 2011-12-21  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
